style: change name class and variables

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -32,7 +32,7 @@
         app:layout_constraintHorizontal_bias="0.502"/>
 
     <Button
-        android:id="@+id/butSignUp"
+        android:id="@+id/butSignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="53dp"
@@ -53,7 +53,7 @@
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:text="Log In"
-        app:layout_constraintBottom_toTopOf="@+id/butSignUp"
+        app:layout_constraintBottom_toTopOf="@+id/butSignIn"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
