--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -32,7 +32,7 @@
         app:layout_constraintHorizontal_bias="0.502"/>
 
     <Button
-        android:id="@+id/butSignUp"
+        android:id="@+id/butSignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
