--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -23,51 +23,67 @@
         android:id="@+id/etePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:layout_marginTop="48dp"
-        app:layout_constraintTop_toBottomOf="@+id/eteEmail"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/eteEmail"/>
 
-    <Button
-        android:id="@+id/butSignIn"
+    <EditText
+        android:id="@+id/etePasswordConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginStart="8dp"
-        android:text="Sign Up"
+        android:layout_marginTop="38dp"
+        android:ems="10"
+        android:inputType="textPassword"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="45dp"
         app:layout_constraintTop_toBottomOf="@+id/etePassword"/>
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:text="Email"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintLeft_toLeftOf="@+id/eteEmail"
-        app:layout_constraintRight_toRightOf="@+id/eteEmail"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/eteEmail"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/eteEmail"
+        />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Confirm password"
+        app:layout_constraintBottom_toTopOf="@+id/etePasswordConfirm"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Password"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/etePassword"/>
+
+    <Button
+        android:id="@+id/butSignIn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:text="Password"
-        app:layout_constraintLeft_toLeftOf="@+id/etePassword"
-        app:layout_constraintRight_toRightOf="@+id/etePassword"
-        app:layout_constraintHorizontal_bias="0.496"
-        android:layout_marginBottom="-1dp"
-        app:layout_constraintBottom_toTopOf="@+id/etePassword"/>
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="125dp"
+        android:text="Sign Up"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etePasswordConfirm"/>
 </android.support.constraint.ConstraintLayout>
